--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,3 +1,4 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
+@import "../../bower_components/font-awesome/scss/font-awesome.scss";
 // endbower
